--- a/Italian Trade/US_Dollar_Vehicle_Currency.ipynb
+++ b/Italian Trade/US_Dollar_Vehicle_Currency.ipynb
@@ -1635,7 +1635,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "!git commit"
+      "!git commit -a"
      ],
      "language": "python",
      "metadata": {},
@@ -1644,23 +1644,86 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "U\tREADME.md\n"
+        "# On branch greet\n",
+        "# Untracked files:\n",
+        "#   (use \"git add <file>...\" to include in what will be committed)\n",
+        "#\n",
+        "#\t../.VirtualBox/\n",
+        "#\t../.bash_history\n",
+        "#\t../.gimp-2.8/\n",
+        "#\t../.gitconfig\n",
+        "#\t../.gitk\n",
+        "#\t../.idlerc/\n",
+        "#\t../.ipython/\n",
+        "#\t../.matplotlib/\n",
+        "#\t../.ssh/\n",
+        "#\t../.thumbnails/\n",
+        "#\t../.zipline/\n",
+        "#\t../99 Sample rate of Train.csv\n",
+        "#\t../Black, Stackoverflow icon   Icon Search Engine   Iconfinder.htm\n",
+        "#\t../Black, Stackoverflow icon   Icon Search Engine   Iconfinder_files/\n",
+        "#\t../Blue Book For Bulldozers/\n",
+        "#\t../Bluebook.htm\n",
+        "#\t../Bluebook_files/\n",
+        "#\t../CSV_Sampler\n",
+        "#\t../CSV_Sampler.py\n",
+        "#\t../Digit Recognizer/\n",
+        "#\t.ipynb_checkpoints/\n",
+        "#\t3_year_exchange_rate_volitlity.png\n",
+        "#\tCountryNumbers_indexConti.xlsx\n",
+        "#\tForConti_AllItalianImportsVCP.raw\n",
+        "#\titalian_imports easy read version.csv\n",
+        "#\titalian_imports.csv\n",
+        "#\titalian_imports_random_10percent.csv\n",
+        "#\t../Kaggle Aux/\n",
+        "#\t../MelbURN.mp4\n",
+        "#\t../Model_Checker.py\n",
+        "#\t../RGM/\n",
+        "#\t../Titanic/\n",
+        "#\t../VirtualBox VMs/\n",
+        "#\t../central_lim/\n",
+        "#\t../cmd Kaggle.lnk\n",
+        "#\t../desktop.ini\n",
+        "#\t../ggplot_styling_for_matplotlib.ipynb\n",
+        "#\t../key\n",
+        "#\t../key.pub\n",
+        "#\t../lime/\n",
+        "#\t../pip/\n",
+        "#\t../self portriat.htm\n",
+        "#\t../self portriat_files/\n",
+        "#\t../tutorial/\n",
+        "nothing added to commit but untracked files present (use \"git add\" to track)\n"
+       ]
+      }
+     ],
+     "prompt_number": 86
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!git pull origin master"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Already up-to-date.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "error: 'commit' is not possible because you have unmerged files.\n",
-        "hint: Fix them up in the work tree,\n",
-        "hint: and then use 'git add/rm <file>' as\n",
-        "hint: appropriate to mark resolution and make a commit,\n",
-        "hint: or use 'git commit -a'.\n",
-        "fatal: Exiting because of an unresolved conflict.\n"
+        "From https://github.com/agconti/US_Dollar_Vehicle_Currency\n",
+        " * branch            master     -> FETCH_HEAD\n"
        ]
       }
      ],
-     "prompt_number": 82
+     "prompt_number": 85
     },
     {
      "cell_type": "code",
