removed bearcart from repo

--- a/Italian Trade/US_Dollar_Vehicle_Currency.ipynb
+++ b/Italian Trade/US_Dollar_Vehicle_Currency.ipynb
@@ -1066,7 +1066,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 89
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -1081,13 +1081,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[master 1baceff] added plotting for currency market share by observation and trade val\n",
-        " 1 file changed, 1027 insertions(+), 1292 deletions(-)\n",
-        " rewrite Italian Trade/US_Dollar_Vehicle_Currency.ipynb (77%)\n"
+        "[master 99e6135] added plotting for rate derivatives and currency observation and trade value market share\n",
+        " 1 file changed, 119 insertions(+), 15 deletions(-)\n"
        ]
       }
      ],
-     "prompt_number": 90
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
