finsished initial draft

--- a/Italian Trade/US_Dollar_Vehicle_Currency.ipynb
+++ b/Italian Trade/US_Dollar_Vehicle_Currency.ipynb
@@ -2167,7 +2167,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 86
+     "prompt_number": 63
     },
     {
      "cell_type": "code",
@@ -2182,12 +2182,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[master 95ed990] increased regression complexity\n",
-        " 1 file changed, 841 insertions(+), 182 deletions(-)\n"
+        "[master 5edfbf8] finsished intial modeling and visualizing\n",
+        " 1 file changed, 452 insertions(+), 27 deletions(-)\n"
        ]
       }
      ],
-     "prompt_number": 87
+     "prompt_number": 64
     },
     {
      "cell_type": "code",
@@ -2197,7 +2197,21 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "From https://github.com/agconti/US_Dollar_Vehicle_Currency\n",
+        " * branch            master     -> FETCH_HEAD\n",
+        "error: The following untracked working tree files would be overwritten by merge:\n",
+        "\tREADME.md\n",
+        "Please move or remove them before you can merge.\n",
+        "Aborting\n"
+       ]
+      }
+     ],
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
